# template-rust-library

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-rust-dependencies.yml
