[package]
name = "flowscripter_template_rust_library"
version = "0.2.0"
edition = "2021"
description = "Project template for a Rust library."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-rust-library"

[lib]
crate-type = ["lib"]
